--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+.card {
+    color: #F8BAC7;
+}
+
+.card-img-overlay:hover{
+    background-color:lightseagreen;
+    color:white;
+    opacity: 0.6;
+    transition: 0.8s;
+ }
+
 .row {
     display: flex;
     justify-content: flex-start;
@@ -20,6 +31,11 @@ h2 {
     font-size: 32px;
 }
 
+h3 {
+    line-height: 0%;
+    font-size: 1.5rem;
+}
+
 p {
     font-family: 'Montserrat', 'sans-serif';
     font-weight: normal;
@@ -29,3 +45,4 @@ p {
 .navbar-toggler {
     border: 0px;
 }
+
